@@ -29,8 +29,9 @@
 #include <errno.h>
 
 #include "avrdude.h"
-#include "libavrdude.h"
-
+#include "avr.h"
+#include "pindefs.h"
+#include "pgm.h"
 #include "bitbang.h"
 
 #if HAVE_LINUXGPIO
@@ -144,10 +145,9 @@ static int linuxgpio_dir_in(unsigned int gpio)
 static int linuxgpio_fds[N_GPIO] ;
 
 
-static int linuxgpio_setpin(PROGRAMMER * pgm, int pinfunc, int value)
+static int linuxgpio_setpin(PROGRAMMER * pgm, int pin, int value)
 {
   int r;
-  int pin = pgm->pinno[pinfunc]; // TODO
 
   if (pin & PIN_INVERSE)
   {
@@ -171,11 +171,10 @@ static int linuxgpio_setpin(PROGRAMMER * pgm, int pinfunc, int value)
   return 0;
 }
 
-static int linuxgpio_getpin(PROGRAMMER * pgm, int pinfunc)
+static int linuxgpio_getpin(PROGRAMMER * pgm, int pin)
 {
   unsigned char invert=0;
   char c;
-  int pin = pgm->pinno[pinfunc]; // TODO
 
   if (pin & PIN_INVERSE)
   {
@@ -201,15 +200,14 @@ static int linuxgpio_getpin(PROGRAMMER * pgm, int pinfunc)
 
 }
 
-static int linuxgpio_highpulsepin(PROGRAMMER * pgm, int pinfunc)
+static int linuxgpio_highpulsepin(PROGRAMMER * pgm, int pin)
 {
-  int pin = pgm->pinno[pinfunc]; // TODO
-  
+
   if ( linuxgpio_fds[pin & PIN_MASK] < 0 )
     return -1;
 
-  linuxgpio_setpin(pgm, pinfunc, 1);
-  linuxgpio_setpin(pgm, pinfunc, 0);
+  linuxgpio_setpin(pgm, pin, 1);
+  linuxgpio_setpin(pgm, pin, 0);
 
   return 0;
 }
@@ -218,8 +216,7 @@ static int linuxgpio_highpulsepin(PROGRAMMER * pgm, int pinfunc)
 
 static void linuxgpio_display(PROGRAMMER *pgm, const char *p)
 {
-    avrdude_message(MSG_INFO, "%sPin assignment  : /sys/class/gpio/gpio{n}\n",p);
-    pgm_display_generic_mask(pgm, p, SHOW_AVR_PINS);
+  /* MAYBE */
 }
 
 static void linuxgpio_enable(PROGRAMMER *pgm)
@@ -246,8 +243,7 @@ static int linuxgpio_open(PROGRAMMER *pgm, char *port)
 {
   int r, i, pin;
 
-  if (bitbang_check_prerequisites(pgm) < 0)
-    return -1;
+  bitbang_check_prerequisites(pgm);
 
 
   for (i=0; i<N_GPIO; i++)
@@ -261,14 +257,14 @@ static int linuxgpio_open(PROGRAMMER *pgm, char *port)
   //mostry LED status, can't be set to GPIO0. It can be fixed when a better 
   //solution exists.
   for (i=0; i<N_PINS; i++) {
-    if ( (pgm->pinno[i] & PIN_MASK) != 0 ||
+    if ( pgm->pinno[i] != 0 ||
          i == PIN_AVR_RESET ||
          i == PIN_AVR_SCK   ||
          i == PIN_AVR_MOSI  ||
          i == PIN_AVR_MISO ) {
         pin = pgm->pinno[i] & PIN_MASK;
         if ((r=linuxgpio_export(pin)) < 0) {
-            avrdude_message(MSG_INFO, "Can't export GPIO %d, already exported/busy?: %s",
+            fprintf(stderr, "Can't export GPIO %d, already exported/busy?: %s",
                     pin, strerror(errno));
             return r;
         }
@@ -315,8 +311,6 @@ void linuxgpio_initpgm(PROGRAMMER *pgm)
 {
   strcpy(pgm->type, "linuxgpio");
 
-  pgm_fill_old_pins(pgm); // TODO to be removed if old pin data no longer needed
-
   pgm->rdy_led        = bitbang_rdy_led;
   pgm->err_led        = bitbang_err_led;
   pgm->pgm_led        = bitbang_pgm_led;
@@ -345,8 +339,9 @@ const char linuxgpio_desc[] = "GPIO bitbanging using the Linux sysfs interface";
 
 void linuxgpio_initpgm(PROGRAMMER * pgm)
 {
-  avrdude_message(MSG_INFO, "%s: Linux sysfs GPIO support not available in this configuration\n",
-                  progname);
+  fprintf(stderr,
+	  "%s: Linux sysfs GPIO support not available in this configuration\n",
+	  progname);
 }
 
 const char linuxgpio_desc[] = "GPIO bitbanging using the Linux sysfs interface (not available)";
